--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -67,6 +67,7 @@ dependencies:
   change_app_package_name: ^1.1.0
   firebase_messaging: ^14.7.8
   firebase_core: ^2.24.2
+  cloud_firestore: ^4.13.6
   flutter_local_notifications: ^16.2.0
   permission_handler: ^10.3.0
   flutter_localization: ^0.2.0
