--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -77,6 +77,7 @@ dependencies:
   #Shimmer loader viewer...
   shimmer: ^3.0.0
   fluttertoast: ^8.2.2
+  intl_phone_field: ^3.2.0
 
 #  flutter_polyline_points: any
 #  location: any
