--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -78,6 +78,8 @@ dependencies:
   shimmer: ^3.0.0
   fluttertoast: ^8.2.2
   intl_phone_field: ^3.2.0
+  flutter_webview_plugin: ^0.4.0
+  webview_flutter: ^4.4.2
 
 #  flutter_polyline_points: any
 #  location: any
