--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -80,6 +80,7 @@ dependencies:
   intl_phone_field: ^3.2.0
   flutter_webview_plugin: ^0.4.0
   webview_flutter: ^4.4.2
+  dotted_border: ^2.1.0
 
 #  flutter_polyline_points: any
 #  location: any
