--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -81,6 +81,7 @@ dependencies:
   flutter_webview_plugin: ^0.4.0
   webview_flutter: ^4.4.2
   dotted_border: ^2.1.0
+  linear_progress_bar: ^1.1.1
 
 #  flutter_polyline_points: any
 #  location: any
